# KeyCortex

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DigitalWallet_WalletAuthAdapter_Spec.md  Dockerfile  Dockerfile.watchdog  FlowCortex_L1_Chain_Parameters_ProofCortex_Expectation.md  FlowCortex_L1_Change_Request.md  Integration_Guide_AuthBuddy_IdP.md  Integration_Guide_FlowCortex_L1.md  Integration_Guide_FortressDigital.md  Integration_Guide_ProofCortex.md  Integration_Guide_Treasury_Settlement_App.md  KeyCortex_API_v0.1_Contract.md  KeyCortex_DevOps_Guide.md  KeyCortex_Handoff.md  KeyCortex_Learnings.md  KeyCortex_Operator_Dashboard_Spec.md  KeyCortex_Postgres_Degradation_Playbook.md  KeyCortex_Startupz_Field_Ownership_Matrix.md  KeyCortex_TODO_Tracker.md  KeyCortex_TechStack_Decision.md  README.md  docker-compose.yml  nohup.out
.github/workflows/: wallet-service-ci.yml
crates/: README.md
crates/kc-api-types/: Cargo.toml
crates/kc-api-types/src/: lib.rs
crates/kc-auth-adapter/: Cargo.toml
crates/kc-auth-adapter/src/: lib.rs
crates/kc-chain-client/: Cargo.toml
crates/kc-chain-client/src/: lib.rs
crates/kc-chain-flowcortex/: Cargo.toml
crates/kc-chain-flowcortex/src/: lib.rs
crates/kc-crypto/: Cargo.toml
crates/kc-crypto/src/: lib.rs
crates/kc-storage/: Cargo.toml
crates/kc-storage/src/: lib.rs
crates/kc-wallet-core/: Cargo.toml
crates/kc-wallet-core/src/: lib.rs
data/keystore/rocksdb/: 000036.sst  000039.sst  IDENTITY  LOG  LOG.old.1772044928498758  LOG.old.1772045596409953  LOG.old.1772047788782112  LOG.old.1772048678945915  LOG.old.1772048832644973  LOG.old.1772049484737292  LOG.old.1772188025936961  LOG.old.1772194215389577  MANIFEST-000033  MANIFEST-000045
deploy/: Dockerfile_template  docker-compose_template.yml  e2e_integration_plan.txt  example_authbuddy.md  nginx-keycortex-ui.conf  nginx-wasm.conf  platform_port_allocation.md  setup_docker_template.sh  team_rollout_talking_points.txt
migrations/postgres/: 0001_init.sql
scripts/: build_wasm.sh  cross_build_windows.sh  run_wallet_service_cached.sh  setup_baremetal.sh  setup_docker.sh  smoke_db_fallback.sh  watchdog.sh
services/wallet-service/: Cargo.toml
services/wallet-service/src/: auth.rs  chain_config.rs  db.rs  fortressdigital.rs  main.rs  ops.rs  proofcortex.rs  submit.rs
ui/: README.md
ui/config/: icon-manifest.json
ui/shared/: icon-resolver.example.ts  icon-resolver.ts
ui/wallet-baseline/: app.js  index.html  styles.css  themes.json  wallet-theme.template.json  wallet-ux-template.json
ui/wallet-wasm/: Cargo.toml  index.html  wallet-baseline
ui/wallet-wasm/src/: api.rs  dom.rs  events.rs  fold.rs  icons.rs  lib.rs  platform.rs  profile.rs  state.rs  theme.rs  wallet_list.rs  wallet_ops.rs
