[workspace]
members = [
  "crates/kc-api-types",
  "crates/kc-crypto",
  "crates/kc-wallet-core",
  "crates/kc-storage",
  "crates/kc-chain-client",
  "crates/kc-chain-flowcortex",
  "crates/kc-auth-adapter",
  "services/wallet-service",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["KeyCortex Team"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
