[package]
name = "kc-chain-flowcortex"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
kc-api-types = { path = "../kc-api-types" }
kc-chain-client = { path = "../kc-chain-client" }
