[package]
name = "kc-wallet-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
kc-api-types = { path = "../kc-api-types" }
kc-chain-client = { path = "../kc-chain-client" }
kc-crypto = { path = "../kc-crypto" }
kc-storage = { path = "../kc-storage" }
