[package]
name = "wallet-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
kc-api-types = { path = "../../crates/kc-api-types" }
kc-auth-adapter = { path = "../../crates/kc-auth-adapter" }
kc-chain-client = { path = "../../crates/kc-chain-client" }
kc-chain-flowcortex = { path = "../../crates/kc-chain-flowcortex" }
kc-crypto = { path = "../../crates/kc-crypto" }
uuid.workspace = true
