[package]
name = "wallet-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
kc-api-types = { path = "../../crates/kc-api-types" }
kc-auth-adapter = { path = "../../crates/kc-auth-adapter" }
kc-chain-client = { path = "../../crates/kc-chain-client" }
kc-chain-flowcortex = { path = "../../crates/kc-chain-flowcortex" }
kc-crypto = { path = "../../crates/kc-crypto" }
kc-storage = { path = "../../crates/kc-storage" }

[dev-dependencies]
tempfile = "3"
tower = "0.5"
